[fix] #34 DTO에 entity 변환 위임